c/examples/writing-a-c-compiler-tests/tests/chapter_6/valid/if_taken.c
int main(void) {
    int a = 1;
    int b = 0;
    if (a)
        b = 1;
    return b;
}