c/examples/writing-a-c-compiler-tests/tests/chapter_6/invalid_semantics/extra_credit/goto_variable.c
int main(void) {
    int a;
    goto a;
    return 0;
}